--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -10,7 +10,7 @@
 <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
 <script>
 var gitalk = new Gitalk({
-    id: '{{ page.date }}',
+    id: decodeURI(window.location.pathname),
     clientID: '{{ site.gitalk.clientID }}',
     clientSecret: '{{ site.gitalk.clientSecret }}',
     repo: '{{ site.gitalk.repo }}',
