--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -14,7 +14,7 @@ var gitalk = new Gitalk({
   id: decodeURI(window.location.pathname),
     clientID: '5e27f68dbc8e16bda35e',
     clientSecret: '10c8794ba3583d326f4bacba789158119a82c3c8',
-    repo: 'blog-comments',
+    repo: 'uchief.gihub.io',
     owner: 'uchief',
     admin: ['uchief'], 
 	labels: ['Gitalk'],
