--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -5,7 +5,7 @@
 {% endif %} -->
 
    
-<div id="gitalk-container"></div>
+<!-- <div id="gitalk-container"></div>
 <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
 <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
 <script>
@@ -20,4 +20,4 @@ var gitalk = new Gitalk({
 	labels: ['Gitalk'],
 })
 gitalk.render('gitalk-container')
-</script> 
+</script>  -->
