--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,8 @@ tail_includes:
   - post-nav
   - comments
 ---
+<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+<script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
 
 {% include lang.html %}
 
@@ -150,3 +152,23 @@ tail_includes:
   </div><!-- .post-tail-bottom -->
 
 </div><!-- div.post-tail-wrapper -->
+
+<!-- Gitalk 评论 start  -->
+{% if site.gitalk.enable %}
+<!-- Link Gitalk 的支持文件  -->
+
+<div id="gitalk-container"></div>
+    <script type="text/javascript">
+    var gitalk = new Gitalk({
+      // gitalk的主要参数
+      clientID: '5e27f68dbc8e16bda35e',
+      clientSecret: '10c8794ba3583d326f4bacba789158119a82c3c8',
+      repo: 'uchief.gihub.io',
+      owner: 'uchief',
+      admin: ['uchief'],
+      id: window.location.pathname,
+    });
+    gitalk.render('gitalk-container');
+</script>
+{% endif %}
+<!-- Gitalk end -->
