--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -165,7 +165,7 @@ tail_includes:
       repo: 'uchief.gihub.io',
       owner: 'uchief',
       admin: ['uchief'],
-      id: decodeURI(window.location.pathname),
+      id: 'window.location.pathname',
     });
     gitalk.render('gitalk-container');
 </script>
