--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -162,10 +162,10 @@ tail_includes:
     var gitalk = new Gitalk({
       clientID: '5e27f68dbc8e16bda35e',
       clientSecret: '10c8794ba3583d326f4bacba789158119a82c3c8',
-      repo: 'uchief.gihub.io',
+      repo: 'uchief.github.io',
       owner: 'uchief',
       admin: ['uchief'],
-      id: 'window.location.pathname',
+      id: window.location.pathname,
     });
     gitalk.render('gitalk-container');
 </script>
